--- a/package.json
+++ b/package.json
@@ -9,19 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.10.0",
+    "@neondatabase/serverless": "^1.0.1",
+    "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@types/imagekit": "^3.1.5",
+    "@types/lodash": "^4.17.20",
+    "@types/react-color": "^3.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.44.3",
     "imagekit": "^5.2.0",
     "imagekitio-next": "^1.0.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
     "next": "^14.2.30",
+    "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
+    "postgres": "^3.4.7",
     "react": "^18",
+    "react-color": "^2.19.3",
     "react-dom": "^18",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
@@ -30,6 +43,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
     "postcss": "^8",
